Suite corrections contrastes

--- a/style.css
+++ b/style.css
@@ -44,6 +44,15 @@ a:focus, button:focus {
     color: black; 
 }
 
+.light-bg {
+    background-color: rgba(255,255,255,0.8); 
+    color: black; 
+}
+
+.shadow-text {
+    text-shadow: 1px 1px 2px black;
+}
+
 /* =========================================
 CSS initial
 ==========================================*/
